[package]
name = "memoni"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", default-features = false }
anyhow = "1.0.99"
bincode = "2.0.1"
egui = "0.32.0"
egui_glow = { version = "0.32.0", default-features = false, features = ["x11"] }
glow = "0.16.0"
glutin = { version = "0.32.3", default-features = false, features = ["egl", "x11"] }
lexopt = "0.3.1"
mio = { version = "1.0.4", features = ["os-poll"] }
raw-window-handle = "0.6.2"
rustix = { version = "0.38.44", default-features = false, features = ["system"] }
signal-hook = "0.3.18"
signal-hook-mio = { version = "0.2.4", features = ["support-v1_0"] }
x11rb = { version = "0.13.1", features = ["allow-unsafe-code", "randr", "xfixes", "xtest"] }
xkeysym = "0.2.1"
